# fastapi-template

./: .env.example  Makefile  README.md  main.py  pyproject.toml  pytest.ini  setup.cfg
common/: email.py
core/: config.py  db.py
migrations/: env.py
migrations/versions/: b32fbdcd9c4e_.py
models/: base_model.py  user.py
repositories/: user_repo.py
routes/: __init__.py  deps.py  user_routes.py
schemas/: user_schema.py
services/: user_service.py
